# vcs-tcpip-as-es

./: .gitignore  CMakeLists.txt  Makefile  README.md  simple_message_client.c  simple_message_server.c
required_binaries/: simple_message_client  simple_message_server_logic
